<resources>
    <string name="app_name">Chat</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_list">ListActivity</string>

    <!-- Home activity -->
    <string name="register">Register</string>
    <string name="presentationAppContent">Come to talk to other people from around the world about specific subject!</string>

    <!-- Login activity -->
    <string name="accountChoice">Account choice </string>
    <string name="changeAccount"><u>Change account</u></string>

    <string name="password">Password</string>
    <string name="useAccountSaved"><u>Use account saved</u></string>

    <string-array name="titles_link">
        <item>Home</item>
        <item>Friends</item>
        <item>Parameters</item>
    </string-array>

    <string-array name="icon_link">
        <item>@drawable/ic_account_circle_black_24dp</item>
        <item>@drawable/ic_group_black_24dp</item>
        <item>@drawable/ic_settings_black_24dp</item>
    </string-array>

    <!-- Register activity -->
    <string name="descriptionChoiceSexeTitle">Who are you?</string>
    <string name="descriptionChoiceSexeContent">Are you a boy or a girl?</string>

    <string name="descriptionChoiceUsernameTitle">What\'s your username ?</string>
    <string name="descriptionChoiceUsernameContent">Be creative but polite :)</string>

    <string name="textBackToChoiceSexe"><u>Well, I want to go back</u></string>

    <string name="boy">I\'m a boy</string>
    <string name="girl">I\'m a girl</string>

    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="repeat_password">Repeat password</string>

    <!-- Room list -->
    <string name="room_list">Rooms list</string>
    <string name="action_logout">Logout</string>

    <!-- Suggest room -->
    <string name="room_suggest">Suggest a room</string>
    <string name="room_name">Name</string>
    <string name="room_argument">Why add this room?</string>
    <string name="valid">Valid</string>

    <!-- Room activity -->
    <string name="author">Author</string>
    <string name="message">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="action">Author is writing</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="go">Go</string>

    <!-- Profile's user -->
    <string name="send_request">Send a friend request</string>
    <string name="title_activity_friend">FriendActivity</string>
    <string name="manage_friends"><u>Manage your friends</u></string>

    <!-- Friends list -->
    <string name="actionFriendValid">Valid</string>
    <string name="actionFriendDecline">Decline</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
