<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <RelativeLayout
        android:id="@+id/userInformation"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp">

        <EditText
            android:id="@+id/username"
            android:hint="@string/username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_below="@id/username"
            android:inputType="textPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/useAccountSaved"
        android:layout_below="@id/userInformation"
        android:text="@string/useAccountSaved"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>