<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp">

    <TextView
        android:text="@string/room_suggest"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:text="@string/room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightPrimary"
        android:layout_marginBottom="32dp"
        android:padding="8dp"
        android:singleLine="true"/>

    <TextView
        android:text="@string/room_argument"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/room_argument"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="32dp"
        android:padding="8dp"
        android:singleLine="false"
        android:background="@color/lightPrimary"/>

    <Button
        android:id="@+id/valid"
        android:text="@string/valid"
        android:layout_gravity="center_horizontal"
        android:background="@color/secondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>