<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:layout_gravity="bottom">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">

        <ImageView
            android:id="@+id/backButton"
            android:src="@mipmap/left_arrow"
            android:gravity="center"
            android:padding="16dp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/descriptionChoiceUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/descriptionChoiceUsernameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            style="@style/title"
            android:text="@string/descriptionChoiceUsernameTitle"/>

        <TextView
            android:id="@+id/descriptionChoiceUsernameText"
            android:layout_below="@id/descriptionChoiceUsernameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            style="@style/description"
            android:text="@string/descriptionChoiceUsernameContent"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:id="@+id/usernameLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_bottom">

            <EditText
                android:id="@+id/username"
                android:layout_width="@dimen/size_username"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:padding="@dimen/edittext_padding"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>
                <!--android:background="@drawable/frame_user"-->

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutPassword"
            android:layout_below="@id/usernameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:layout_width="@dimen/size_username"
                android:layout_height="wrap_content"
                android:padding="@dimen/edittext_padding"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/passwordRepeat"
                android:hint="@string/repeat_password"
                android:layout_below="@id/password"
                android:layout_width="@dimen/size_username"
                android:layout_height="wrap_content"
                android:padding="@dimen/edittext_padding"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:singleLine="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/buttonLayout"
            android:layout_below="@id/layoutPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_margin="8dp"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
