<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/layoutUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/username"
                android:text="@string/author"
                android:textSize="16dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/status"
                android:layout_below="@id/username"
                android:text="Status: offline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/secondaryText"
                android:textSize="12sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">

            <Button
                android:id="@+id/actionButtonValid"
                android:text="@string/actionFriendValid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/actionButtonDecline"
                android:layout_toRightOf="@id/actionButtonValid"
                android:text="@string/actionFriendDecline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>