<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:id="@+id/userInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@drawable/frame_user"
            android:layout_marginBottom="32dp">

            <ImageView
                android:id="@+id/userAvatar"
                android:src="@mipmap/boy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/userName"
                android:layout_below="@id/userAvatar"
                android:text="@string/author"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/loginButton"
                android:layout_below="@id/userName"
                android:text="@string/login"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/changeAccount"
            android:layout_below="@id/userInformation"
            android:text="@string/changeAccount"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</RelativeLayout>