<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <RelativeLayout
        android:id="@+id/topProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp">

        <RelativeLayout
            android:id="@+id/layoutAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp">

            <ImageView
                android:id="@+id/userAvatar"
                android:src="@mipmap/boy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutUsername"
            android:layout_toRightOf="@id/layoutAvatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/username"
                android:text="@string/author"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/userMessages"
                android:text="Messages:"
                android:layout_below="@id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottomProfile"
        android:layout_below="@id/topProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:id="@+id/layoutFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/sendRequest"
                android:padding="8dp"
                android:background="@color/primaryDark"
                android:textColor="@android:color/white"
                android:text="@string/send_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/linkManageFriends"
                android:layout_below="@id/sendRequest"
                android:text="@string/manage_friends"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>